data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4634.wast
;; 3. **Test for Index Overflow with Large Table in `br_table` Followed by Valid `call_indirect`**:    - Create a large `br_table` with many targets and use an index that overflows the value bounds. Follow with a valid `call_indirect` to observe how handling large tables impacts invocation.    - Constraint: Large table and overflow index.    - Relation: Scrutinizes index handling in large table scenarios and subsequent function invocations.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $index_overflow_with_valid_call
      (block
        (br_table 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 (i32.const 9999999))
      )
      (call_indirect (type 0) (i32.const 0))
    )
    (table 1 funcref)
  )
  "type mismatch"
)